--- a/style.css
+++ b/style.css
@@ -8,3 +8,83 @@ body {
     height: 100vh;
     margin: 0;
 }
+
+.game-container {
+    width: 350px;
+    text-align: center;
+    background: rgba(20, 20, 20, 0.8);
+    padding: 30px;
+    border-radius: 20px;
+    box-shadow: 0 0 25px rgba(0, 255, 100, 0.4);
+}
+
+h1 {
+    font-size: 2.2rem;
+    letter-spacing: 2px;
+    color: #00ff7f;
+    text-shadow: 0 0 8px #00ff7f;
+}
+
+.board {
+    margin: 20px 0;
+}
+
+.hand {
+    margin-bottom: 25px;
+}
+
+.cards {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin: 1-px 0;
+}
+
+.card {
+    width: 60px;
+    height: 90px;
+}
+
+
+/* .card {
+  width: 60px;
+  height: 90px;
+  background: linear-gradient(145deg, #1e1e1e, #2a2a2a);
+  border-radius: 8px;
+  box-shadow: 0 0 8px rgba(0, 255, 100, 0.3);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  font-size: 1.2rem;
+  color: #fff;
+} */
+
+
+.buttons {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+button {
+    background: #00ff7f;
+    color: #000;
+    font-weight: 600;
+    border: none;
+    border-radius: 8px;
+    padding: 10px 15px;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+
+button:hover {
+    background: #9abd00;
+    box-shadow: 1.1rem;
+}
+
+#message {
+  margin-top: 15px;
+  font-size: 1.1rem;
+  color: #fffa;
+}
